js/js.translator/testData/incremental/invalidation/enumsInInlineFunctionsWithCrossModuleInliner/lib1/l1.4.kt
inline fun foo1(): List<Enum<*>> {
    return emptyList()
}

inline fun foo2(): List<Enum<*>> {
    return emptyList()
}

inline fun foo3(): List<Enum<*>> {
    return emptyList()
}
